--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -30,7 +30,7 @@
   opacity: 1;
   width: 218px;
   height: 45px;
-  margin:2px 5px 25px 50px ;
+  margin:2px 5px 25px 90px ;
   border: none;
   border-radius: 50px;
   font-size: 0.9em;
