--- a/sass/pages/_restocard.scss
+++ b/sass/pages/_restocard.scss
@@ -17,11 +17,12 @@
     color: black;
     padding: 10px;
   }
+}
   .resto_header img{
     width: 180px;
-    padding-left:30px;
+    padding-left: 30px;
   } 
-}
+
   
   .resto_subheader img{
     width:100%;
@@ -77,7 +78,7 @@
   .resto__element {
     border-radius: 10px;
     background-color: white;
-    width: 300px;
+    width:94%;
     display: block;
     margin-left: auto; 
     margin-right: auto;
@@ -98,7 +99,7 @@
     align-items:center;
     justify-content:center;
     transform: rotate(180deg);
-    transition-duration: 1.2s;
+    transition-duration: 0.5s;
     overflow: hidden;
   
    &:hover{
@@ -111,7 +112,7 @@
 
   .resto__icon{
     color: $tertiary;
-    transform: 1.2s ease-in-out;
+    transform: 0.5s ease-in-out;
     background-color:white;
     border-radius: 100px;
   }
@@ -142,12 +143,13 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      transition-duration: 1.2s;
+      transition-duration: 0.5s;
       width: 0px;
       height: 70px;
     }
     
     &:hover .resto__contents__right {
+      cursor: pointer;
       width: 60px;
       height: 70px;
       border-radius: 0px 10px 10px 0px;
@@ -162,7 +164,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        width: 200px;
+        
       }
       &__price {
         position: absolute;
@@ -176,41 +178,43 @@
 @media (min-width: 768px) {
     .resto{
       margin: 10px 10px 10px 10px;
-      height: 499px;
       .resto_head{
         justify-content: center;
         margin-right: 8%;
       }
       .resto__menu{
-        width: 30%;
+        
         .resto__title{
           margin-left: auto;
           margin-right: auto;
         }
       }
       .resto__element{
-        width: 255px;
+        margin-right: 60px;
       }
     
     }
     .box{
       display: flex;
       justify-content: space-around;
+      flex-direction: column;
     }
   
     .resto_subheader img{
       height: 225px;
     }
     .resto_header img{
-      margin-left: 36%;
+      margin-left: 40%;
+      padding: 0;
     }
   .resto__btn{
-      margin: 0% 0% 2% 41%;
+      margin: 0% 0% 3% 40%;
     }  
   
   .resto__contents__inline{
     font-size: small;
-    width: 145px;
+    overflow: hidden;
+    width: 80%;
   }
 
   }
